--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "^3.4.0"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.4.0",
     "autoprefixer": "latest",
     "postcss": "latest"
   }
